Opened 10 years ago

Closed 10 years ago

#5720 closed defect (fixed)

drawutils regression causes blank text in drawtext filter

Reported by: Marton Balint Owned by:
Priority: important Component: avfilter
Version: git-master Keywords: overlay drawutils drawtext regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Summary of the bug:

Since d645182227e8830de4de59a7b9ebec1b7e714d12 the following command does not draw any text on the video output:

./ffmpeg -f lavfi -i "testsrc=d=1,format=yuv420p" -f lavfi -i "testsrc=d=1,format=rgba" \
-filter_complex "[0:v]scale=720x576,drawtext=fontsize=220:x=64:y=256:fontfile=/usr/share/fonts/truetype/Roboto-Regular.ttf:text=TEST[v1];[v1][1:v]overlay=format=rgb[out]" \
-map "[out]" out.avi

The expected output is a big black "TEST" label on the video, the actual output has no drawn text.

Console output with debug loglevel:

% ./ffmpeg -loglevel debug -f lavfi -i "testsrc=d=1,format=yuv420p" -f lavfi -i "testsrc=d=1,format=rgba" -filter_complex "[0:v]scale=720x576,drawtext=fontsize=220:x=64:y=256:fontfile=/usr/share/fonts/truetype/Roboto-Regular.ttf:text=TEST[v1];[v1][1:v]overlay=format=rgb[out]" -map "[out]" out.avi
ffmpeg version N-79903-gb2244fa Copyright (c) 2000-2016 the FFmpeg developers
  built with gcc 4.8 (SUSE Linux)
  configuration: --disable-vaapi --enable-vdpau --enable-gpl --enable-libfreetype --enable-libzvbi --enable-libass --enable-frei0r --enable-openssl --enable-nonfree --enable-libx264 --enable-libfdk-aac --enable-nonfree --enable-libvorbis --enable-decklink --enable-libmp3lame
  libavutil      55. 24.100 / 55. 24.100
  libavcodec     57. 40.100 / 57. 40.100
  libavformat    57. 36.100 / 57. 36.100
  libavdevice    57.  0.101 / 57.  0.101
  libavfilter     6. 45.100 /  6. 45.100
  libswscale      4.  1.100 /  4.  1.100
  libswresample   2.  0.101 /  2.  0.101
  libpostproc    54.  0.100 / 54.  0.100
Splitting the commandline.
Reading option '-loglevel' ... matched as option 'loglevel' (set logging level) with argument 'debug'.
Reading option '-f' ... matched as option 'f' (force format) with argument 'lavfi'.
Reading option '-i' ... matched as input file with argument 'testsrc=d=1,format=yuv420p'.
Reading option '-f' ... matched as option 'f' (force format) with argument 'lavfi'.
Reading option '-i' ... matched as input file with argument 'testsrc=d=1,format=rgba'.
Reading option '-filter_complex' ... matched as option 'filter_complex' (create a complex filtergraph) with argument '[0:v]scale=720x576,drawtext=fontsize=220:x=64:y=256:fontfile=/usr/share/fonts/truetype/Roboto-Regular.ttf:text=TEST[v1];[v1][1:v]overlay=format=rgb[out]'.
Reading option '-map' ... matched as option 'map' (set input stream mapping) with argument '[out]'.
Reading option 'out.avi' ... matched as output file.
Finished splitting the commandline.
Parsing a group of options: global .
Applying option loglevel (set logging level) with argument debug.
Applying option filter_complex (create a complex filtergraph) with argument [0:v]scale=720x576,drawtext=fontsize=220:x=64:y=256:fontfile=/usr/share/fonts/truetype/Roboto-Regular.ttf:text=TEST[v1];[v1][1:v]overlay=format=rgb[out].
Successfully parsed a group of options.
Parsing a group of options: input file testsrc=d=1,format=yuv420p.
Applying option f (force format) with argument lavfi.
Successfully parsed a group of options.
Opening an input file: testsrc=d=1,format=yuv420p.
detected 4 logical cores
[Parsed_testsrc_0 @ 0x21fb7a0] Setting 'd' to value '1'
[Parsed_testsrc_0 @ 0x21fb7a0] size:320x240 rate:25/1 duration:1.000000 sar:1/1
[Parsed_format_1 @ 0x21fc120] compat: called with args=[yuv420p]
[Parsed_format_1 @ 0x21fc120] Setting 'pix_fmts' to value 'yuv420p'
[auto-inserted scaler 0 @ 0x21fe4e0] w:iw h:ih flags:'bilinear' interl:0
[Parsed_format_1 @ 0x21fc120] auto-inserting filter 'auto-inserted scaler 0' between the filter 'Parsed_testsrc_0' and the filter 'Parsed_format_1'
[AVFilterGraph @ 0x21fa660] query_formats: 3 queried, 1 merged, 1 already done, 0 delayed
[auto-inserted scaler 0 @ 0x21fe4e0] w:320 h:240 fmt:rgb24 sar:1/1 -> w:320 h:240 fmt:yuv420p sar:1/1 flags:0x2
[lavfi @ 0x21f9f00] All info found
Input #0, lavfi, from 'testsrc=d=1,format=yuv420p':
  Duration: N/A, start: 0.000000, bitrate: N/A
    Stream #0:0, 1, 1/25: Video: rawvideo, 1 reference frame (I420 / 0x30323449), yuv420p, 320x240 (0x0) [SAR 1:1 DAR 4:3], 0/1, 25 fps, 25 tbr, 25 tbn
Successfully opened the file.
Parsing a group of options: input file testsrc=d=1,format=rgba.
Applying option f (force format) with argument lavfi.
Successfully parsed a group of options.
Opening an input file: testsrc=d=1,format=rgba.
[Parsed_testsrc_0 @ 0x2259420] Setting 'd' to value '1'
[Parsed_testsrc_0 @ 0x2259420] size:320x240 rate:25/1 duration:1.000000 sar:1/1
[Parsed_format_1 @ 0x2259c20] compat: called with args=[rgba]
[Parsed_format_1 @ 0x2259c20] Setting 'pix_fmts' to value 'rgba'
[auto-inserted scaler 0 @ 0x225bf00] w:iw h:ih flags:'bilinear' interl:0
[Parsed_format_1 @ 0x2259c20] auto-inserting filter 'auto-inserted scaler 0' between the filter 'Parsed_testsrc_0' and the filter 'Parsed_format_1'
[AVFilterGraph @ 0x22365c0] query_formats: 3 queried, 1 merged, 1 already done, 0 delayed
[swscaler @ 0x225c480] Forcing full internal H chroma due to input having non subsampled chroma
[auto-inserted scaler 0 @ 0x225bf00] w:320 h:240 fmt:rgb24 sar:1/1 -> w:320 h:240 fmt:rgba sar:1/1 flags:0x2
[lavfi @ 0x2257fa0] All info found
Input #1, lavfi, from 'testsrc=d=1,format=rgba':
  Duration: N/A, start: 0.000000, bitrate: N/A
    Stream #1:0, 1, 1/25: Video: rawvideo, 1 reference frame (RGBA / 0x41424752), rgba, 320x240 (0x0) [SAR 1:1 DAR 4:3], 0/1, 25 fps, 25 tbr, 25 tbn
Successfully opened the file.
[Parsed_scale_0 @ 0x22747e0] Setting 'w' to value '720x576'
[Parsed_scale_0 @ 0x22747e0] w:720 h:576 flags:'bilinear' interl:0
[Parsed_drawtext_1 @ 0x2274c40] Setting 'fontsize' to value '220'
[Parsed_drawtext_1 @ 0x2274c40] Setting 'x' to value '64'
[Parsed_drawtext_1 @ 0x2274c40] Setting 'y' to value '256'
[Parsed_drawtext_1 @ 0x2274c40] Setting 'fontfile' to value '/usr/share/fonts/truetype/Roboto-Regular.ttf'
[Parsed_drawtext_1 @ 0x2274c40] Setting 'text' to value 'TEST'
[Parsed_overlay_2 @ 0x227e2e0] Setting 'format' to value 'rgb'
Parsing a group of options: output file out.avi.
Applying option map (set input stream mapping) with argument [out].
Successfully parsed a group of options.
Opening an output file: out.avi.
[file @ 0x2277c60] Setting default whitelist 'file,crypto'
Successfully opened the file.
[Parsed_scale_0 @ 0x2278240] Setting 'w' to value '720x576'
[Parsed_scale_0 @ 0x2278240] w:720 h:576 flags:'bilinear' interl:0
[Parsed_drawtext_1 @ 0x2278a00] Setting 'fontsize' to value '220'
[Parsed_drawtext_1 @ 0x2278a00] Setting 'x' to value '64'
[Parsed_drawtext_1 @ 0x2278a00] Setting 'y' to value '256'
[Parsed_drawtext_1 @ 0x2278a00] Setting 'fontfile' to value '/usr/share/fonts/truetype/Roboto-Regular.ttf'
[Parsed_drawtext_1 @ 0x2278a00] Setting 'text' to value 'TEST'
[Parsed_overlay_2 @ 0x2278920] Setting 'format' to value 'rgb'
[graph 0 input from stream 0:0 @ 0x228b720] Setting 'video_size' to value '320x240'
[graph 0 input from stream 0:0 @ 0x228b720] Setting 'pix_fmt' to value '0'
[graph 0 input from stream 0:0 @ 0x228b720] Setting 'time_base' to value '1/25'
[graph 0 input from stream 0:0 @ 0x228b720] Setting 'pixel_aspect' to value '1/1'
[graph 0 input from stream 0:0 @ 0x228b720] Setting 'sws_param' to value 'flags=2'
[graph 0 input from stream 0:0 @ 0x228b720] Setting 'frame_rate' to value '25/1'
[graph 0 input from stream 0:0 @ 0x228b720] w:320 h:240 pixfmt:yuv420p tb:1/25 fr:25/1 sar:1/1 sws_param:flags=2
[graph 0 input from stream 1:0 @ 0x228ba40] Setting 'video_size' to value '320x240'
[graph 0 input from stream 1:0 @ 0x228ba40] Setting 'pix_fmt' to value '28'
[graph 0 input from stream 1:0 @ 0x228ba40] Setting 'time_base' to value '1/25'
[graph 0 input from stream 1:0 @ 0x228ba40] Setting 'pixel_aspect' to value '1/1'
[graph 0 input from stream 1:0 @ 0x228ba40] Setting 'sws_param' to value 'flags=2'
[graph 0 input from stream 1:0 @ 0x228ba40] Setting 'frame_rate' to value '25/1'
[graph 0 input from stream 1:0 @ 0x228ba40] w:320 h:240 pixfmt:rgba tb:1/25 fr:25/1 sar:1/1 sws_param:flags=2
[format @ 0x228c580] compat: called with args=[yuv420p]
[format @ 0x228c580] Setting 'pix_fmts' to value 'yuv420p'
[auto-inserted scaler 0 @ 0x228d300] w:iw h:ih flags:'bilinear' interl:0
[format @ 0x228c580] auto-inserting filter 'auto-inserted scaler 0' between the filter 'Parsed_overlay_2' and the filter 'format'
[AVFilterGraph @ 0x227eae0] query_formats: 7 queried, 5 merged, 1 already done, 0 delayed
[Parsed_scale_0 @ 0x2278240] w:320 h:240 fmt:yuv420p sar:1/1 -> w:720 h:576 fmt:rgba sar:16/15 flags:0x2
[Parsed_overlay_2 @ 0x2278920] main w:720 h:576 fmt:rgba overlay w:320 h:240 fmt:rgba eof_action:repeat
[Parsed_overlay_2 @ 0x2278920] [framesync @ 0x228b0a8] Selected 1/25 time base
[Parsed_overlay_2 @ 0x2278920] [framesync @ 0x228b0a8] Sync level 2
[auto-inserted scaler 0 @ 0x228d300] w:720 h:576 fmt:rgba sar:16/15 -> w:720 h:576 fmt:yuv420p sar:16/15 flags:0x2
[mpeg4 @ 0x2274c80] intra_quant_bias = 0 inter_quant_bias = -64
[avi @ 0x227e260] Using AVStream.codec to pass codec parameters to muxers is deprecated, use AVStream.codecpar instead.
Output #0, avi, to 'out.avi':
  Metadata:
    ISFT            : Lavf57.36.100
    Stream #0:0, 0, 1/25: Video: mpeg4, 1 reference frame (FMP4 / 0x34504D46), yuv420p, 720x576 (0x0) [SAR 16:15 DAR 4:3], 0/1, q=2-31, 200 kb/s, 25 fps, 25 tbn (default)
    Metadata:
      encoder         : Lavc57.40.100 mpeg4
    Side data:
      cpb: bitrate max/min/avg: 0/0/200000 buffer size: 0 vbv_delay: -1
Stream mapping:
  Stream #0:0 (rawvideo) -> scale
  Stream #1:0 (rawvideo) -> overlay:overlay
  overlay -> Stream #0:0 (mpeg4)
Press [q] to stop, [?] for help
cur_dts is invalid (this is harmless if it occurs once at the start per stream)
[rawvideo @ 0x2257b00] PACKET SIZE: 115200, STRIDE: 480
[Parsed_drawtext_1 @ 0x2278a00] n:0 t:0.000000 text_w:518 text_h:161 x:64 y:256
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0) from link #0
cur_dts is invalid (this is harmless if it occurs once at the start per stream)
[rawvideo @ 0x2272ca0] PACKET SIZE: 307200, STRIDE: 1280
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0) from link #1
[Parsed_overlay_2 @ 0x2278920] n:1.000000 t:0.000000 pos:nan x:0.000000 xi:0 y:0.000000 yi:0
Clipping frame in rate conversion by 0.000008
[rawvideo @ 0x2257b00] PACKET SIZE: 115200, STRIDE: 480
[Parsed_drawtext_1 @ 0x2278a00] n:1 t:0.040000 text_w:518 text_h:161 x:64 y:256
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.04) from link #0
[rawvideo @ 0x2272ca0] PACKET SIZE: 307200, STRIDE: 1280
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.04) from link #1
[Parsed_overlay_2 @ 0x2278920] n:2.000000 t:0.040000 pos:nan x:0.000000 xi:0 y:0.000000 yi:0
[rawvideo @ 0x2257b00] PACKET SIZE: 115200, STRIDE: 480
[Parsed_drawtext_1 @ 0x2278a00] n:2 t:0.080000 text_w:518 text_h:161 x:64 y:256
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.08) from link #0
[rawvideo @ 0x2272ca0] PACKET SIZE: 307200, STRIDE: 1280
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.08) from link #1
[Parsed_overlay_2 @ 0x2278920] n:3.000000 t:0.080000 pos:nan x:0.000000 xi:0 y:0.000000 yi:0
[rawvideo @ 0x2257b00] PACKET SIZE: 115200, STRIDE: 480
[Parsed_drawtext_1 @ 0x2278a00] n:3 t:0.120000 text_w:518 text_h:161 x:64 y:256
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.12) from link #0
[rawvideo @ 0x2272ca0] PACKET SIZE: 307200, STRIDE: 1280
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.12) from link #1
[Parsed_overlay_2 @ 0x2278920] n:4.000000 t:0.120000 pos:nan x:0.000000 xi:0 y:0.000000 yi:0
[rawvideo @ 0x2257b00] PACKET SIZE: 115200, STRIDE: 480
[Parsed_drawtext_1 @ 0x2278a00] n:4 t:0.160000 text_w:518 text_h:161 x:64 y:256
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.16) from link #0
[rawvideo @ 0x2272ca0] PACKET SIZE: 307200, STRIDE: 1280
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.16) from link #1
[Parsed_overlay_2 @ 0x2278920] n:5.000000 t:0.160000 pos:nan x:0.000000 xi:0 y:0.000000 yi:0
[rawvideo @ 0x2257b00] PACKET SIZE: 115200, STRIDE: 480
[Parsed_drawtext_1 @ 0x2278a00] n:5 t:0.200000 text_w:518 text_h:161 x:64 y:256
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.2) from link #0
[rawvideo @ 0x2272ca0] PACKET SIZE: 307200, STRIDE: 1280
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.2) from link #1
[Parsed_overlay_2 @ 0x2278920] n:6.000000 t:0.200000 pos:nan x:0.000000 xi:0 y:0.000000 yi:0
[rawvideo @ 0x2257b00] PACKET SIZE: 115200, STRIDE: 480
[Parsed_drawtext_1 @ 0x2278a00] n:6 t:0.240000 text_w:518 text_h:161 x:64 y:256
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.24) from link #0
[rawvideo @ 0x2272ca0] PACKET SIZE: 307200, STRIDE: 1280
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.24) from link #1
[Parsed_overlay_2 @ 0x2278920] n:7.000000 t:0.240000 pos:nan x:0.000000 xi:0 y:0.000000 yi:0
[rawvideo @ 0x2257b00] PACKET SIZE: 115200, STRIDE: 480
[Parsed_drawtext_1 @ 0x2278a00] n:7 t:0.280000 text_w:518 text_h:161 x:64 y:256
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.28) from link #0
[rawvideo @ 0x2272ca0] PACKET SIZE: 307200, STRIDE: 1280
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.28) from link #1
[Parsed_overlay_2 @ 0x2278920] n:8.000000 t:0.280000 pos:nan x:0.000000 xi:0 y:0.000000 yi:0
[rawvideo @ 0x2257b00] PACKET SIZE: 115200, STRIDE: 480
[Parsed_drawtext_1 @ 0x2278a00] n:8 t:0.320000 text_w:518 text_h:161 x:64 y:256
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.32) from link #0
[rawvideo @ 0x2272ca0] PACKET SIZE: 307200, STRIDE: 1280
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.32) from link #1
[Parsed_overlay_2 @ 0x2278920] n:9.000000 t:0.320000 pos:nan x:0.000000 xi:0 y:0.000000 yi:0
[rawvideo @ 0x2257b00] PACKET SIZE: 115200, STRIDE: 480
[Parsed_drawtext_1 @ 0x2278a00] n:9 t:0.360000 text_w:518 text_h:161 x:64 y:256
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.36) from link #0
[rawvideo @ 0x2272ca0] PACKET SIZE: 307200, STRIDE: 1280
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.36) from link #1
[Parsed_overlay_2 @ 0x2278920] n:10.000000 t:0.360000 pos:nan x:0.000000 xi:0 y:0.000000 yi:0
[rawvideo @ 0x2257b00] PACKET SIZE: 115200, STRIDE: 480
[Parsed_drawtext_1 @ 0x2278a00] n:10 t:0.400000 text_w:518 text_h:161 x:64 y:256
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.4) from link #0
[rawvideo @ 0x2272ca0] PACKET SIZE: 307200, STRIDE: 1280
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.4) from link #1
[Parsed_overlay_2 @ 0x2278920] n:11.000000 t:0.400000 pos:nan x:0.000000 xi:0 y:0.000000 yi:0
[rawvideo @ 0x2257b00] PACKET SIZE: 115200, STRIDE: 480
[Parsed_drawtext_1 @ 0x2278a00] n:11 t:0.440000 text_w:518 text_h:161 x:64 y:256
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.44) from link #0
[rawvideo @ 0x2272ca0] PACKET SIZE: 307200, STRIDE: 1280
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.44) from link #1
[Parsed_overlay_2 @ 0x2278920] n:12.000000 t:0.440000 pos:nan x:0.000000 xi:0 y:0.000000 yi:0
[rawvideo @ 0x2257b00] PACKET SIZE: 115200, STRIDE: 480
[Parsed_drawtext_1 @ 0x2278a00] n:12 t:0.480000 text_w:518 text_h:161 x:64 y:256
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.48) from link #0
[rawvideo @ 0x2272ca0] PACKET SIZE: 307200, STRIDE: 1280
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.48) from link #1
[Parsed_overlay_2 @ 0x2278920] n:13.000000 t:0.480000 pos:nan x:0.000000 xi:0 y:0.000000 yi:0
[rawvideo @ 0x2257b00] PACKET SIZE: 115200, STRIDE: 480
[Parsed_drawtext_1 @ 0x2278a00] n:13 t:0.520000 text_w:518 text_h:161 x:64 y:256
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.52) from link #0
[rawvideo @ 0x2272ca0] PACKET SIZE: 307200, STRIDE: 1280
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.52) from link #1
[Parsed_overlay_2 @ 0x2278920] n:14.000000 t:0.520000 pos:nan x:0.000000 xi:0 y:0.000000 yi:0
[rawvideo @ 0x2257b00] PACKET SIZE: 115200, STRIDE: 480
[Parsed_drawtext_1 @ 0x2278a00] n:14 t:0.560000 text_w:518 text_h:161 x:64 y:256
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.56) from link #0
[rawvideo @ 0x2272ca0] PACKET SIZE: 307200, STRIDE: 1280
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.56) from link #1
[Parsed_overlay_2 @ 0x2278920] n:15.000000 t:0.560000 pos:nan x:0.000000 xi:0 y:0.000000 yi:0
[rawvideo @ 0x2257b00] PACKET SIZE: 115200, STRIDE: 480
[Parsed_drawtext_1 @ 0x2278a00] n:15 t:0.600000 text_w:518 text_h:161 x:64 y:256
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.6) from link #0
[rawvideo @ 0x2272ca0] PACKET SIZE: 307200, STRIDE: 1280
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.6) from link #1
[Parsed_overlay_2 @ 0x2278920] n:16.000000 t:0.600000 pos:nan x:0.000000 xi:0 y:0.000000 yi:0
[rawvideo @ 0x2257b00] PACKET SIZE: 115200, STRIDE: 480
[Parsed_drawtext_1 @ 0x2278a00] n:16 t:0.640000 text_w:518 text_h:161 x:64 y:256
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.64) from link #0
[rawvideo @ 0x2272ca0] PACKET SIZE: 307200, STRIDE: 1280
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.64) from link #1
[Parsed_overlay_2 @ 0x2278920] n:17.000000 t:0.640000 pos:nan x:0.000000 xi:0 y:0.000000 yi:0
[rawvideo @ 0x2257b00] PACKET SIZE: 115200, STRIDE: 480
[Parsed_drawtext_1 @ 0x2278a00] n:17 t:0.680000 text_w:518 text_h:161 x:64 y:256
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.68) from link #0
[rawvideo @ 0x2272ca0] PACKET SIZE: 307200, STRIDE: 1280
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.68) from link #1
[Parsed_overlay_2 @ 0x2278920] n:18.000000 t:0.680000 pos:nan x:0.000000 xi:0 y:0.000000 yi:0
[rawvideo @ 0x2257b00] PACKET SIZE: 115200, STRIDE: 480
[Parsed_drawtext_1 @ 0x2278a00] n:18 t:0.720000 text_w:518 text_h:161 x:64 y:256
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.72) from link #0
[rawvideo @ 0x2272ca0] PACKET SIZE: 307200, STRIDE: 1280
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.72) from link #1
[Parsed_overlay_2 @ 0x2278920] n:19.000000 t:0.720000 pos:nan x:0.000000 xi:0 y:0.000000 yi:0
[rawvideo @ 0x2257b00] PACKET SIZE: 115200, STRIDE: 480
[Parsed_drawtext_1 @ 0x2278a00] n:19 t:0.760000 text_w:518 text_h:161 x:64 y:256
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.76) from link #0
[rawvideo @ 0x2272ca0] PACKET SIZE: 307200, STRIDE: 1280
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.76) from link #1
[Parsed_overlay_2 @ 0x2278920] n:20.000000 t:0.760000 pos:nan x:0.000000 xi:0 y:0.000000 yi:0
[rawvideo @ 0x2257b00] PACKET SIZE: 115200, STRIDE: 480
[Parsed_drawtext_1 @ 0x2278a00] n:20 t:0.800000 text_w:518 text_h:161 x:64 y:256
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.8) from link #0
[rawvideo @ 0x2272ca0] PACKET SIZE: 307200, STRIDE: 1280
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.8) from link #1
[Parsed_overlay_2 @ 0x2278920] n:21.000000 t:0.800000 pos:nan x:0.000000 xi:0 y:0.000000 yi:0
[rawvideo @ 0x2257b00] PACKET SIZE: 115200, STRIDE: 480
[Parsed_drawtext_1 @ 0x2278a00] n:21 t:0.840000 text_w:518 text_h:161 x:64 y:256
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.84) from link #0
[rawvideo @ 0x2272ca0] PACKET SIZE: 307200, STRIDE: 1280
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.84) from link #1
[Parsed_overlay_2 @ 0x2278920] n:22.000000 t:0.840000 pos:nan x:0.000000 xi:0 y:0.000000 yi:0
[rawvideo @ 0x2257b00] PACKET SIZE: 115200, STRIDE: 480
[Parsed_drawtext_1 @ 0x2278a00] n:22 t:0.880000 text_w:518 text_h:161 x:64 y:256
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.88) from link #0
[rawvideo @ 0x2272ca0] PACKET SIZE: 307200, STRIDE: 1280
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.88) from link #1
[Parsed_overlay_2 @ 0x2278920] n:23.000000 t:0.880000 pos:nan x:0.000000 xi:0 y:0.000000 yi:0
[rawvideo @ 0x2257b00] PACKET SIZE: 115200, STRIDE: 480
[Parsed_drawtext_1 @ 0x2278a00] n:23 t:0.920000 text_w:518 text_h:161 x:64 y:256
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.92) from link #0
[rawvideo @ 0x2272ca0] PACKET SIZE: 307200, STRIDE: 1280
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.92) from link #1
[Parsed_overlay_2 @ 0x2278920] n:24.000000 t:0.920000 pos:nan x:0.000000 xi:0 y:0.000000 yi:0
[rawvideo @ 0x2257b00] PACKET SIZE: 115200, STRIDE: 480
[Parsed_drawtext_1 @ 0x2278a00] n:24 t:0.960000 text_w:518 text_h:161 x:64 y:256
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.96) from link #0
[rawvideo @ 0x2272ca0] PACKET SIZE: 307200, STRIDE: 1280
[Parsed_overlay_2 @ 0x2278920] Incoming frame (time:0.96) from link #1
[Parsed_overlay_2 @ 0x2278920] n:25.000000 t:0.960000 pos:nan x:0.000000 xi:0 y:0.000000 yi:0
[Parsed_overlay_2 @ 0x2278920] [framesync @ 0x228b0a8] Sync level 1
[Parsed_overlay_2 @ 0x2278920] [framesync @ 0x228b0a8] Sync level 0
[output stream 0:0 @ 0x2277d00] EOF on sink link output stream 0:0:default.
No more output streams to write to, finishing.
frame=   25 fps=0.0 q=3.5 Lsize=     167kB time=00:00:01.00 bitrate=1365.3kbits/s speed=5.87x    
video:160kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 3.880404%
Input file #0 (testsrc=d=1,format=yuv420p):
  Input stream #0:0 (video): 25 packets read (2880000 bytes); 25 frames decoded; 
  Total: 25 packets (2880000 bytes) demuxed
Input file #1 (testsrc=d=1,format=rgba):
  Input stream #1:0 (video): 25 packets read (7680000 bytes); 25 frames decoded; 
  Total: 25 packets (7680000 bytes) demuxed
Output file #0 (out.avi):
  Output stream #0:0 (video): 25 frames encoded; 25 packets muxed (164287 bytes); 
  Total: 25 packets (164287 bytes) muxed
50 frames successfully decoded, 0 decoding errors
[AVIOContext @ 0x2277ae0] Statistics: 10 seeks, 35 writeouts

Change History (1)

comment:1 by Michael Niedermayer, 10 years ago

Reproduced by developer: set
Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.